# meraid

./: .gitignore  CHANGELOG.md  CONTEXT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README-zh.md  README.md  SECURITY.md  skills-lock.json
.agents/skills/cli-design/: SKILL.md  animate.md  audit.md  clarify.md  critique.md  harden.md  interact.md  normalize.md  polish.md  review.md  scaffold.md  silence.md  teach-ferrite.md
.agents/skills/cli-design/reference/: color-and-symbols.md  configuration.md  error-design.md  interaction-patterns.md  output-hierarchy.md  progress-and-feedback.md  robustness.md  ux-writing-cli.md
.claude/skills/meraid/: SKILL.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  release.yml
docs/: ai-first-design.md
docs/adr/: 0001-color-as-opt-in-library-capability.md
docs/demo/: README.md
examples/: 01-flowchart.mmd  02-flowchart-branch.mmd  03-sequence.mmd  04-class.mmd  05-state.mmd  06-pie.mmd  07-er.mmd  README.md  cjk-class.mmd  cjk-flowchart.mmd  cjk-sequence.mmd  run-all.sh
src/: diagram.rs  layout.rs  lib.rs  main.rs  parser.rs  render.rs  theme.rs
