[package]
name = "meraid"
version = "0.1.0"
edition = "2021"
authors = ["Bin"]
description = "Render Mermaid diagrams in your terminal - A Rust implementation"
license = "MIT"
repository = "https://github.com/Binlogo/meraid"

[[bin]]
name = "meraid"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.27"
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.10"

[profile.release]
lto = true
codegen-units = 1
strip = true
