[package]
name = "meraid"
version = "0.2.0"
edition = "2021"
rust-version = "1.86"
authors = ["Binlogo <binboy886@gmail.com>"]
description = "Render Mermaid diagrams in your terminal — a pure-Rust CLI and library"
documentation = "https://docs.rs/meraid"
homepage = "https://github.com/Binlogo/meraid"
repository = "https://github.com/Binlogo/meraid"
license = "MIT"
readme = "README.md"
keywords = ["mermaid", "diagram", "terminal", "cli", "ascii"]
categories = ["command-line-utilities", "visualization"]
# Ship only what is needed to build and use the crate — keep AI-skill dirs,
# docs, and examples out of the published tarball.
include = ["/src/**/*.rs", "/Cargo.toml", "/README.md", "/LICENSE"]

[[bin]]
name = "meraid"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
unicode-width = "0.2.2"

[profile.release]
lto = true
codegen-units = 1
strip = true
